fix title wrapping on safari

--- a/src/css/nav.less
+++ b/src/css/nav.less
@@ -17,6 +17,7 @@ nav.top-bar {
   .logo {
     font-size: 20px;
     display: flex;
+    white-space: nowrap;
     align-items: center;
     text-transform: lowercase;
 
